--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "babel-runtime": "^6.18.0",
     "bcrypt": "^0.8.7",
     "meteor-node-stubs": "~0.2.0"
   },
   "devDependencies": {
-	    "autoprefixer": "^6.4.0"
-	},
-   "postcss": {
-	    "plugins": {
-	      "autoprefixer": {"browsers": ["last 2 versions"]}
-	    }
-	}
+    "autoprefixer": "^6.4.0"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {
+        "browsers": [
+          "last 2 versions"
+        ]
+      }
+    }
+  }
 }
