--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-runtime": "^6.18.0",
+    "babel-runtime": "^6.20.0",
     "bcrypt": "^0.8.7",
-    "meteor-node-stubs": "~0.2.0"
+    "meteor-node-stubs": "~0.2.0",
+    "simpl-schema": "0.0.4"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0"
+    "autoprefixer": "^6.4.0",
+    "babel-polyfill": "^6.20.0"
   },
   "postcss": {
     "plugins": {
